# grok-gui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/desktop/: apps  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/bundle/macos/dmg/res/: 修复.command  安装说明.txt
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: grok_runtime.rs  lib.rs  main.rs  provider_config.rs  workspace.rs
docs/marketing/: 01-show-hn.md  02-twitter-thread.md  03-reddit-localllama.md  04-architecture-blog.md  05-tutorial-video-script.md  06-qoder-handover.md
electron-version/: .gitignore  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
electron-version/electron/: auth.ts  cli.ts  commands.test.ts  commands.ts  grok-runtime.test.ts  grok-runtime.ts  main.ts  preload.ts  search-worker.ts  session-pool.test.ts  session-pool.ts  workspace.test.ts  workspace.ts
electron-version/scripts/: afterSign.js
electron-version/src/: App.tsx  electron.d.ts  index.css  main.tsx  vite-env.d.ts
packaging/homebrew/Casks/: grok-gui.rb  (+1 more)
scripts/: First-Run-Open-Me.command
(+6 files in other folders)
